--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link rel="assetlinks.json file" href="%PUBLIC_URL%/assetlinks.json" />
+        <link rel="assetlinks.json file" href="%PUBLIC_URL%/.well-known/assetlinks.json" />
+        <!-- didnt work with .well-known folder-->
 
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
