--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <script id="react-dotenv" src="https://IIEADB.github.io/env.js"></script>
+    <title>Combitrainer</title>
+    <script id="react-dotenv" src="https://combitrainer.net/env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
